# proj_calib

./: CMakeLists.txt  CMakeLists.txt~
2dpts/: Camera1.txt  Camera2.txt  Camera3.txt  Camera4.txt
include/: #read_data.hpp#  .#read_data.hpp  SpacePoints.hpp  SpacePoints.hpp~  SpacePoints.h~  bundle_adjuster.hpp  bundle_adjuster.hpp~  camera.h  camera.h~  read_data.hpp  read_data.hpp~  reconstruction.hpp  saveply.hpp  saveply.hpp~  show_cam.hpp
intrinsics/: Camera1.yml  Camera2.yml  Camera3.yml  Camera4.yml
src/: GPATH  GRTAGS  GTAGS  SpacePoints.cpp~  bundle_adjuster.cpp  bundle_adjuster.cpp~  camera.cpp  camera.cpp~  main.cpp  main.cpp~  read_data.cpp  read_data.cpp~  reconstruction.cpp  reconstruction.cpp~  saveply.cpp  show_cam.cpp
